# bits-fonera

./: .gitignore  README.md  simulator.sh
arduino/: bits1_5_arduino.pde
bits_miosix/: Makefile  bitsboard_benchmark.txt  bitsboard_display.cpp  bitsboard_display.h  drawboard.cpp  logo-closed.h  logo-open.h  logo.h  logo2.cpp  main.cpp  misc_drivers.cpp  misc_drivers.h
bits_miosix/img/: logo2.cpp  logo2.h
bits_miosix/lcdimage/: CMakeLists.txt  read.cpp
bits_miosix/miosix/config/: Makefile.inc
bits_miosix/mxgui/: color.h  font.cpp  image.h  mxgui_settings.h
bits_miosix/mxgui/benchmark/: benchmark.cpp  checkpattern2.cpp
bits_miosix/mxgui/drivers/: display_bitsboard.cpp  display_bitsboard.h  display_qt.h  event_types_strive.h
bitsd/: Makefile
bitsd-scripts/: Makefile
bitsd-scripts/etc/: banner
bitsd-scripts/etc/crontabs/: root
bitsd-scripts/etc/init.d/: bits  bitsd-kill  bitsdd  gettime-init
bitsd/src/: CMakeLists.txt  Makefile  base64.cpp  base64.h  bitsd-debug.conf  bitsd.conf  bitsd.cpp  bitsd.h  core.cpp  core.h  logger.cpp  logger.h  main.cpp
hardware/: connections.odt
misc-scripts/: presence_detector.py
packages openwrt 10.03/: Readme.txt  bitsd-scripts_1.0-1_atheros.ipk  bitsd-scripts_1.1-1_atheros.ipk  bitsd_1.0-1_atheros.ipk  bitsd_1.01-1_atheros.ipk  bitsd_1.03-1_atheros.ipk  bitsd_1.04-1_atheros.ipk  bitsd_1.05-1_atheros.ipk  bitsd_1.07-1_atheros.ipk  stm32flash_svn61-0_atheros.ipk  wpa-supplicant_20100418-2_atheros.ipk
socket_test/: Makefile  socket.cpp
stm32flash/: Makefile
stm32flash/src/: Makefile
(+55 files in other folders)
